--- a/lib/nesta-plugin-sharethis/sharethis.yml
+++ b/lib/nesta-plugin-sharethis/sharethis.yml
@@ -1,27 +1,20 @@
-delicious:     "<span class='st_delicious' displayText='Delicious'></span>"
-digg:          "<span class='st_digg' displayText='Digg'></span>"
-dzone:         "<span class='st_dzone' displayText='DZone'></span>"
-email:         "<span class='st_email' displayText='Email'></span>"
-facebook:      "<span class='st_facebook' displayText='Facebook'></span>"
-facebook_like: "<span class='st_fblike' displayText='Facebook Like'></span>"
-google:        "<span class='st_google' displayText='Google'></span>"
-google_reader: "<span class='st_google_reader' displayText='Google Reader'></span>"
-linkedin:      "<span class='st_linkedin' displayText='LinkedIn'></span>"
-reddit:        "<span class='st_reddit' displayText='Reddit'></span>"
-tumblr:        "<span class='st_twitter' displayText='Tweet'></span>" 
-twitter:       "<span class='st_tumblr' displayText='Tumblr'></span>"
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+# Notes:
+# - I rmeoved displayText attribute, as it was causing
+#   the provider name to show up on my page, which is
+#   not want I want.
+# - To override this easily within nesta, create a 
+#   'sharethis.yml' file in your config directory and 
+#   hack away.
+delicious:     "<span class='st_delicious'></span>"
+digg:          "<span class='st_digg'></span>"
+dzone:         "<span class='st_dzone'></span>"
+email:         "<span class='st_email'></span>"
+facebook:      "<span class='st_facebook'></span>"
+facebook_like: "<span class='st_fblike'></span>"
+google:        "<span class='st_google'></span>"
+google_reader: "<span class='st_google_reader'></span>"
+linkedin:      "<span class='st_linkedin'></span>"
+reddit:        "<span class='st_reddit'></span>"
+tumblr:        "<span class='st_twitter'></span>" 
+twitter:       "<span class='st_tumblr'></span>"
 
